<resources>
    <string name="app_name">HaloMedis</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking_kamar">Booking Kamar</string>
    <string name="booking_description"><![CDATA[Temukan rumah sakit & pesan berbagai pilihan kamar rawat inap sesuai kebutuhan]]></string>
    <string name="klinik_spesialis"><![CDATA[Klinik & Praktik Spesialis]]></string>
    <string name="klinik_spesialis_description">Temukan berbagai tempat Praktek Dokter sesuai spesialisasi yang anda butuhkan</string>
    <string name="title_activity_maps">Map</string>
    <string name="terakhir_dilihat">Terakhir dilihat</string>
    <string name="cari">Cari</string>
    <string name="dskripsi_dummy">Rumah sakit adalah suatu organisasi kompleks yang menggunakan Perpaduan peralatan ilmiah yang rumit dan khusus, yang difungsikan oleh kelompok tenaga terlatih dan terdidik dalam menghadapi masalah-masalah yang berkaitan dengan pengetahuan medic modern untuk tujuan pemulihan dan pemeliharaan kesehatan yang baik.
\n\nPengertian Rumah sakit menurut WHO (1957) diberikan batasan yaitu “suatu bagian yang menyeluruh lengkap kepada masyarakat baik kuratif maupun rehabilitative dimana output layanannya menjangkau pelayanan keluarga dan lingkungan rumah sakit juga merupakan pusat pelatihan tenaga kesehatan serta untuk penelitian biososial” .
\n\nPengertian Rumah sakit menurut Mentri Kesehatan RI No. 983/Menkes/per/II/1992  yaitu ” sarana upaya kesehatan dalam menyelanggarakan kegiatan pelayanan kesehatan serta dapat dimanfaatkan untuk pendidikan tenaga kesehatan dan penelitian.” (Hand Book of Instutionl Parmacy Pratice).</string>
    <string name="data_pemesanan">Data Pemesanan</string>
    <string name="info_pemesanan">Info Pemesanan</string>
    <string name="fasilitas_rumah_sakit">Fasilitas Rumah Sakit</string>
    <string name="dokter_rumah_sakit">Dokter Rumah Sakit</string>
    <string name="dokter_umum">Dokter Umum</string>
    <string name="dokter_spesialis">Dokter Spesialis</string>
    <string name="deskripsi_rumah_sakit">Deskripsi Rumah Sakit</string>
    <string name="lokasi">Lokasi</string>
    <string name="lihat_semua_daftar">Lihat semua daftar</string>
    <string name="pesan_kamar">Pesan Kamar</string>
    <string name="data_pasien">Data Pasien</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="alamat_domisili">Alamat Domisili</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="rincian_harga">Rincian Harga</string>
    <string name="informasi">Informasi</string>
    <string name="kamar">Kamar</string>
    <string name="fasilitas_kamar">Fasilitas Kamar</string>
    <string name="harga_per_malam">Harga Per Malam</string>
    <string name="deskripsi_kamar">Deskripsi Kamar</string>
    <string name="pesan">Pesan</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="layanan">Layanan</string>
    <string name="jadwal_praktik">Jadwal Praktik</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="pilih_jadwal">Pilih Jadwal</string>
    <string name="informasi_penolakan">Informasi Penolakan</string>

    <string name="persetujuan">Dengan memilih layanan ini anda menyetujui Syarat &amp; Ketentuan tiap klinik serta kebijakan MediHome</string>
    <string name="medihospital">MediHospital</string>
    <string name="mediclinic">MediClinic</string>
    <string name="mediagnosis">Mediagnosis</string>
    <string name="mediblood">MediBlood</string>
    <string name="medipharmacy">MediPharmacy</string>
    <string name="mediarticle">MediArticle</string>
</resources>
