<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_info_sehat"
        android:icon="@drawable/ic_chrome_reader_mode_24px"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_emergency"
        android:icon="@drawable/alarm"
        android:title="@string/title_notifications"
        />

    <item
        android:id="@+id/navigation_pesanan"
        android:icon="@drawable/ic_receipt_24px"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_face_24px"
        android:title="@string/title_dashboard" />

</menu>
