<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.booking_kamar.profile_rs.DetailKamarActivity">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rumah_sakit"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fasilitas_kamar"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"/>

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="12dp"
                android:id="@+id/fasilitas_recyclerView"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="50dp">

            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:text="@string/harga_per_malam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="Rp 500.000"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="Sudah Temasuk Pajak" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:text="@string/deskripsi_kamar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="80dp"
                android:text="@string/dskripsi_dummy"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_pesan_kamar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pesan"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</ScrollView>
