<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appbar"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_klinik"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rumah_sakit"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.booking_kamar.profile_rs.ProfilRumahSakitActivity">

        <LinearLayout
            android:id="@+id/container_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/nama_klinik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:text="Rumah Sakit UB" />

            <TextView
                android:id="@+id/kategori_klinik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_background"
                android:layout_marginTop="4dp"
                android:paddingLeft="8dp"
                android:paddingTop="3dp"
                android:paddingRight="8dp"
                android:paddingBottom="3dp"
                android:text="Tipe B"
                android:textColor="#fff"
                android:textSize="10sp" />



        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/container_profile"
            android:layout_marginTop="12dp"
            android:background="@color/divider_grey" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabTextColor="#A6000000">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informasi" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layanan" />

        </android.support.design.widget.TabLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_pesan_kamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_layanan"
        android:textAllCaps="false"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_gravity="bottom"/>

</android.support.design.widget.CoordinatorLayout>

