<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.booking_kamar.profile_rs.InformasiFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:text="@string/jadwal_praktik" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/jadwal_dokter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                
                <ImageView
                    android:id="@+id/icon_doctor"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/medihome_doctor_icon"/>

                <TextView
                    android:id="@+id/nama_dokter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center_vertical"
                    android:layout_alignTop="@id/icon_doctor"
                    android:layout_alignBottom="@id/icon_doctor"
                    android:text="dr. Haikal Achmad"
                    android:textColor="@color/colorPrimary"
                    android:layout_toEndOf="@id/icon_doctor"/>

                <TextView
                    android:id="@+id/hari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/nama_dokter"
                    android:layout_below="@id/nama_dokter"
                    android:text="Senin"
                    android:textSize="12sp"
                    android:layout_marginTop="-8dp"
                    />


                <TextView
                    android:id="@+id/jadwal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/oval_background_grey"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="3dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="3dp"
                    android:text="10.00-13.00"
                    android:textColor="#fff"
                    android:textSize="10sp"
                    android:layout_alignStart="@id/nama_dokter"
                    android:layout_below="@id/hari"/>

                <TextView
                    android:id="@+id/jadwal2"
                    android:layout_toRightOf="@id/jadwal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/oval_background_grey"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="3dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="3dp"
                    android:text="13.00-15.00"
                    android:textColor="#fff"
                    android:textSize="10sp"
                    android:layout_below="@id/hari"/>

                <TextView
                    android:id="@+id/jadwal3"
                    android:layout_toRightOf="@id/jadwal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/oval_background_grey"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="3dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="3dp"
                    android:text="15.00-18.00"
                    android:textColor="#fff"
                    android:textSize="10sp"
                    android:layout_below="@id/hari"/>


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jadwal_dokter_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/lihat_detail"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/lokasi"
            android:textAllCaps="true"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            tools:context=".MapsActivity" />

        <TextView
            android:id="@+id/alamat_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/medihome_location_icon"
            android:drawablePadding="8dp"
            tools:text="JL Soekarno Hatta Lowokwaru Malang" />

        <TextView
            android:id="@+id/phone_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/medihome_profile_phone_icon"
            android:drawablePadding="8dp"
            tools:text="031856673" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="80dp"
            android:background="@color/divider_grey" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
